@@ -6,8 +6,8 @@ import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 val osName = System.getProperty("os.name").lowercase()
 val osArch = System.getProperty("os.arch").lowercase()
 
-val appVersion = "1.3.0"
-val appVersionSuffix = "Beta"
+val appVersion = "1.3.3"
+val appVersionSuffix = ""
 
 val platformStr = when {
     osName.contains("win") -> {
@@ -218,7 +218,11 @@ kotlin {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutinesSwing)
             implementation(libs.androidx.runtime.desktop)
-            implementation(libs.kcef)
+            if (System.getProperty("os.name").lowercase().contains("win")) {
+                implementation("dev.datlag:kcef:2024.04.20.4")
+            } else {
+                implementation(libs.kcef)
+            }
 //            implementation(libs.vlcj)
             implementation(libs.oshi.core)
             implementation(libs.versioncompare)
@@ -239,6 +243,15 @@ kotlin {
 compose.desktop {
     application {
         mainClass = "com.jankinwu.fntv.client.MainKt"
+        val macJvmArgs = listOf(
+            "--add-opens", "java.desktop/sun.awt=ALL-UNNAMED",
+            "--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED",
+            "--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED",
+            "--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED"
+        )
+        if (osName.contains("mac")) {
+            jvmArgs += macJvmArgs
+        }
 
         buildTypes.release.proguard {
             isEnabled = true
